deployment/kubernetes-manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: astair-ingress
  namespace: astair
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - astair.northeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: astair.northeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: management-frontend-service
          servicePort: 3000
        path: /
      - backend:
          serviceName: feedback-collector-service
          servicePort: 5000
        path: /feedback-collector
      - backend:
          serviceName: management-backend-service
          servicePort: 8090
        path: /astair-management-backend
